# ControlCenter

./: .gitignore  Cargo.toml  Diesel.toml  README.md  database.sqlite
control_center_server/: Cargo.toml
control_center_server/migrations/2021-12-13-222928_create_users/: up.sql
control_center_server/migrations/2021-12-17-161902_create_postes/: up.sql
control_center_server/src/: main.rs  web_config.rs
control_center_server/src/database/: mod.rs  schema.rs
control_center_server/src/services/authentication/: data.rs  mod.rs  security.rs
control_center_server/src/services/postes/: data.rs  mod.rs
control_center_server/src/services/users/: data.rs  mod.rs
control_center_ui/: .eslintignore  package.json  vue.config.js
control_center_ui/control_center_api/: README.md
control_center_ui/control_center_api/.openapi-generator/: FILES
control_center_ui/control_center_api/docs/: DefaultApi.md  LoginApi.md  PostesApi.md  UserPasswordForm.md  UsersApi.md
control_center_ui/control_center_api/src/: ApiClient.js  index.js
control_center_ui/public/: index.html
migrations/2021-12-13-222928_create_users/: up.sql
migrations/2021-12-17-161902_create_postes/: down.sql  up.sql
postman/schemas/: schema.yaml
src/: main.rs  web_config.rs
src/database/: mod.rs  schema.rs
src/services/: health_check.rs  mod.rs
web/: openapitools.json  package.json  vue.config.js
web/control_center/: README.md  package.json
web/control_center_api/: README.md  package.json
web/generator/: openapitools.json
web/public/: index.html
web/src/: App.vue  main.js
(+67 files in other folders)
