[package]
name = "control_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
rocket = "0.5.0-rc.1"
okapi = "0.7.0-rc.1"
schemars = "0.8.8"
serde = "1"
serde_json = "1"
dotenv = "0.15.0"
jsonwebtoken = "7"
chrono = "0.4.19"
argon2 = "0.3.2"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]

[dependencies.diesel]
version = "1.4.4"
features = ["libsqlite3-sys", "sqlite"]

[dependencies.libsqlite3-sys]
version = ">=0.8.0, <0.24.0"
features = ["bundled"]

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors"
branch = "master"

[dependencies.rocket_okapi]
version = "0.8.0-rc.1"
features = ["rapidoc"]
